<resources>
    <string name="app_name">Easy Paisa</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_here">Register here</string>
    <string name="register_here_">Register Here</string>
    <string name="login">Login</string>
    <string name="login_now">Login Now</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="after_successfully_your_application_we_provide_login_credentials_on_email_sms_from_easy_paisa_team">After Successfully Your Application we provide login credentials on Email/SMS from Easy Paisa Team.</string>
    <string name="full_name">Full Name</string>
    <string name="email_id">Email ID</string>
    <string name="pin_code">PIN Code</string>
    <string name="shop_name">Shop Name</string>
    <string name="pan_number">PAN Number</string>
    <string name="aadhaar_number">Aadhaar Number</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="submit">Submit</string>
    <string name="login_here">Login here</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="welcome">Welcome</string>
    <string name="easy_paisa">Easy Paisa</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="home">Home</string>
    <string name="wallet">Wallet</string>
    <string name="account">Account</string>
    <string name="transactions">Transactions</string>
    <string name="yes_aeps">AePS</string>
    <string name="icici_aeps">ICICI AePS</string>
    <string name="nsdl_aeps">NSDL AePS</string>
    <string name="fino_aeps">Fino AePS</string>
    <string name="micro_atm">Micro Atm</string>
    <string name="electricity">Electricity</string>
    <string name="mobile">Mobile</string>
    <string name="dth">DTH</string>
    <string name="data_card">Datacard</string>
    <string name="other_services">Other Services</string>
    <string name="uti_pancard">Uti Pancard</string>
    <string name="insurance">Insurance</string>
    <string name="no_internet_message">No internet connection, Please check your internet connection</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="new_password">New Password</string>
    <string name="update">Update</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="withdraw">Withdraw</string>
    <string name="balance_info">Balance Info</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="select_bank">Select Bank</string>
    <string name="enter_aadhaar_number">Enter Aadhaar Number</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="i_accept">I accept</string>
    <string name="term_condition"><![CDATA[Term & Condition]]></string>
    <string name="proceed">Proceed</string>
    <string name="ser_withdraw">ser_withdraw</string>
    <string name="ser_balance">ser_balance</string>
    <string name="yes_aeps_icici_ep">I-AePS</string>
    <string name="aeps">AePS</string>
    <string name="not_fingerprint_captured">Not able to capture fingerprint, Please try again.</string>
    <string name="invalid_monile_number">Invalide Mobile number</string>
    <string name="enter_min_amount_">Please enter minimum 100 rupees to max 10000 rupees</string>
    <string name="wallets">Wallets</string>
    <string name="load_wallet">Load Wallet</string>
    <string name="no_internet_connection_please_check_internet_connection">No Internet connection, Please check internet connection</string>
    <string name="retry">Retry</string>
    <string name="complete_your_kyc">Complete your KYC</string>
    <string name="after_successfully_kyc_completion_you_can_use_our_service">After successfully KYC completion you can use our service</string>
    <string name="select_pan_card">Select PAN Card</string>
    <string name="pan_card_picture">PAN card picture(Both side with signature)</string>
    <string name="aadhaar_card_picture">Aadhaar Card Front side picture</string>
    <string name="select_aadhaar_card">Select Aadhaar Card Front</string>
    <string name="proceed_for_kyc">Proceed for KYC</string>
    <string name="choose_selection_type">Choose Selection type</string>
    <string name="provide_permission_camera">Provide permission to access camera to capture image</string>
    <string name="provide_permission_storage">Provice storage permission to access gallery</string>
    <string name="aeps_trasactions">AsPS Transactions</string>
    <string name="select_your_bank">Select your bank</string>
    <string name="scan_finger">Scan Finger</string>
    <string name="mini_statment">Mini Statement</string>
    <string name="aadhaar_pay">Aadhaar Pay</string>
    <string name="ser_aadhar_pay">ser_aadharpay</string>
    <string name="ser_mini_statement">ser_mini_statement</string>
    <string name="success">Success</string>
    <string name="pending">Pending</string>
    <string name="failed">Failed</string>
    <string name="select_operator">Select Operator</string>
    <string name="select">Select</string>
    <string name="talktime">Talktime:</string>
    <string name="validity">Validity</string>
    <string name="brows_plans">Brows Plans</string>
    <string name="mobile_recharge">Mobile Recharge</string>
    <string name="some_thing_wants_wong">Some thing wants wrong, Please try after some time.</string>
    <string name="select_state">Select State</string>
    <string name="state">State</string>
    <string name="the_payment_will_reflect_at_biller_s_end_after_2_3_working_days">The payment will reflect at biller\'s end after 2-3 working days.</string>
    <string name="customer_name">Customer Name</string>
    <string name="states">States</string>
    <string name="fetch_bill">Fetch Bill</string>
    <string name="contact_person">Contact Person</string>
    <string name="email_address">Email Address</string>
    <string name="proceed_for_psa_id">Proceed for PSA ID</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="no_of_tokens_to_buy">No of Tokens to buy</string>
    <string name="personal_information">Personal Information</string>
    <string name="kyc_detail">Kyc Detail</string>
    <string name="old_password">Old Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change_password">Change Password</string>
    <string name="transaction_history">Transaction History</string>
    <string name="filter">Filter</string>
    <string name="clear">Clear</string>
    <string name="you_haven_t_any_transaction_yet">You haven\'t any transaction yet</string>
    <string name="settlement_request">Settlement Request</string>
    <string name="reference_no">Reference No</string>
    <string name="remark">Remark</string>
    <string name="please_enter_valid_IFSC_code">Please enter valid IFSC code</string>
    <string name="valid_chars_ifcs">ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890</string>
    <string name="aadhar_pay">Aadhar Pay</string>
    <string name="ser_deposit">ser_deposit</string>
    <string name="rupee_symbol">₹</string>
    <string name="remarks_optional">Remark(Optional)</string>
    <string name="money_transfer">Money Transfer</string>
    <string name="search_user">Search User</string>
    <string name="beneficiary_name">Beneficiary Name</string>
    <string name="bank_name">Bank Name</string>
    <string name="transfer_money">Transfer Money</string>
    <string name="are_you_sure_wants_to_close_mini_statement">Are you sure you wants to close mini statement</string>
    <string name="balance_inquiry">Balance inquiry</string>
    <string name="lpg_gas">Lpg Gas</string>
    <string name="piped_gas">Piped Gas</string>
    <string name="water">Water</string>
    <string name="insurance_primium">Insurance premium</string>
    <string name="aadhaar_card_back_side_picture">Aadhaar Card back side picture</string>
    <string name="select_aadhaar_card_back">Select Aadhar card Back</string>
    <string name="bank_detail">Bank Detail</string>
    <string name="deposit_bank_detail">Deposit Bank Detail</string>
    <string name="new_version_available">New App Available</string>
    <string name="postpaid">Postpaid</string>
    <string name="recharge">Recharge</string>
    <string name="copyright_2021_easypaisa">EasyPaisa @Copyright %1$s</string>
    <string name="get_otp">Get OTP</string>
    <string name="time_remain_to_verifiy">Time left to verify OTP: </string>
    <string name="resend_otp">Reset OTP</string>
    <string name="don_t_receive_otp">Don\'t receive OTP?</string>
    <string name="please_enter_pan_card_number">Please enter PAN card number</string>
    <string name="please_enter_valid_PAN_number">Please enter valid PAN card number</string>
    <string name="load_wallet_by_upi">Load wallet by UPI</string>
    <string name="verify_otp">Verify Otp</string>
    <string name="deposit_cash">Deposit Cash</string>
    <string name="account_number">Account Number</string>
    <string name="get_bank">Get Bank</string>
    <string name="order_device">Order Device</string>
    <string name="ser_auth_biometric">ser_auth_biometric</string>
    <string name="select_capture_image">Please select or capture image</string>
    <string name="file_provider_name" translatable="false">.provider</string>
    <string name="online_load_wallet">Online load wallet</string>

</resources>
