<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingBottom="@dimen/dim_26dp">

    <TextView
        android:id="@+id/titleDmtTransfer"
        style="@style/TextViewStyleBlackBold20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dim_16dp"
        android:text="@string/money_transfer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/viewH"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorGray"
        app:layout_constraintTop_toBottomOf="@id/titleDmtTransfer" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutDmtMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_16dp"
        android:layout_marginTop="@dimen/dim_26dp"
        android:layout_marginEnd="@dimen/dim_16dp"
        android:hint="@string/mobile_number"
        android:textColorHint="@color/colorGray"
        app:hintTextAppearance="@style/MyHintStyleBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewH">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/inputEdtMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionGo"
            android:inputType="number"
            android:maxLength="10"
            android:textColor="@color/colorBlack"
            android:theme="@style/MyHintStyleBlack" />


    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_16dp"
        android:layout_marginTop="@dimen/dim_26dp"
        android:layout_marginEnd="@dimen/dim_16dp"
        android:background="@drawable/rect_bg_primary_button"
        android:text="@string/search_user"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutDmtMobile" />

    <LinearLayout
        android:id="@+id/linearNewUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dim_8dp"
        android:gravity="center"
        android:layout_marginTop="@dimen/dim_26dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/btn_search"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDontHavAccount"
            style="@style/TextViewStyleGray16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New User?">

        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDontHavAccountRegisterHere"
            style="@style/TextViewStyleBlueBold16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/dim_4dp"
            android:text="@string/register_here"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvDontHavAccount">

        </androidx.appcompat.widget.AppCompatTextView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>