<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fillViewport="true"
    tools:context=".ui.activity.ForgotPassword">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dim_16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_easy_logo"
            app:layout_constraintBottom_toTopOf="@id/constraintLayoutLoginEnterFields"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutLoginEnterFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_16dp"
            android:layout_marginEnd="@dimen/dim_16dp"
            android:layout_marginBottom="@dimen/dim_30dp"
            app:layout_constraintBottom_toTopOf="@id/btnUpdate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tvLabelForgotNow"
                style="@style/TextViewStyleBlueBold26sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvFPassMobile"
                style="@style/TextViewStyleWhitebold14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_2dp"
                tools:text="56666565656"
                app:layout_constraintStart_toStartOf="@id/tvLabelForgotNow"
                app:layout_constraintTop_toBottomOf="@id/tvLabelForgotNow">

            </TextView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutFPOTP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_26dp"
                android:hint="@string/enter_otp"
                android:textColorHint="@color/colorWhite"
                app:hintTextAppearance="@style/MyHintStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvFPassMobile">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="numberPassword"
                    android:maxLength="8"
                    android:textColor="@color/colorWhite"
                    android:theme="@style/MyEditText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutFPPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_8dp"
                android:hint="@string/new_password"
                android:textColorHint="@color/colorWhite"
                app:hintTextAppearance="@style/MyHintStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputLayoutFPOTP">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/colorWhite"
                    android:theme="@style/MyEditText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutFPPasswordConfm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_8dp"
                android:hint="@string/confirm_password"
                android:textColorHint="@color/colorWhite"
                app:hintTextAppearance="@style/MyHintStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputLayoutFPPassword">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/colorWhite"
                    android:theme="@style/MyEditText" />

            </com.google.android.material.textfield.TextInputLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_16dp"
            android:layout_marginEnd="@dimen/dim_16dp"
            android:layout_marginBottom="@dimen/dim_16dp"
            android:background="@drawable/drawable_button_blue_gredient"
            android:fontFamily="@font/muli_bold"
            android:text="@string/update"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_dim_18sp"
            app:layout_constraintBottom_toBottomOf="parent">

        </androidx.appcompat.widget.AppCompatButton>


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>